# unconditional-time-series-diffusion

./: .gitignore  README.md  THIRD-PARTY-LICENSES.txt  pyproject.toml
configs/: guidance.yaml  refinement.yaml  train_tsdiff-cond.yaml  train_tsdiff.yaml  tstr.yaml
configs/guidance/: guidance_electricity.yaml  guidance_exchange.yaml  guidance_kdd_cup.yaml  guidance_m4.yaml  guidance_solar.yaml  guidance_traffic.yaml  guidance_uber_tlc.yaml  guidance_wiki.yaml
configs/refinement/: electricity_nips-deepar.yaml  electricity_nips-linear.yaml  electricity_nips-seasonal_naive.yaml  electricity_nips-transformer.yaml  exchange_rate_nips-deepar.yaml  exchange_rate_nips-linear.yaml  exchange_rate_nips-seasonal_naive.yaml  exchange_rate_nips-transformer.yaml  kdd_cup_2018_without_missing-deepar.yaml  kdd_cup_2018_without_missing-linear.yaml  kdd_cup_2018_without_missing-seasonal_naive.yaml  kdd_cup_2018_without_missing-transformer.yaml  m4_hourly-deepar.yaml  m4_hourly-linear.yaml  m4_hourly-seasonal_naive.yaml  m4_hourly-transformer.yaml  solar_nips-deepar.yaml  solar_nips-linear.yaml  solar_nips-seasonal_naive.yaml  solar_nips-transformer.yaml  traffic_nips-deepar.yaml  traffic_nips-linear.yaml  traffic_nips-seasonal_naive.yaml  traffic_nips-transformer.yaml  uber_tlc_hourly-deepar.yaml  uber_tlc_hourly-linear.yaml  uber_tlc_hourly-seasonal_naive.yaml  uber_tlc_hourly-transformer.yaml  wiki2000_nips-deepar.yaml  wiki2000_nips-linear.yaml  wiki2000_nips-seasonal_naive.yaml  wiki2000_nips-transformer.yaml
configs/train_tsdiff-cond/: electricity_nips.yaml  m4_hourly.yaml  (+24 more)
(+42 files in other folders)
